# flourish

./: .env.template  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  wandb-sweep.yaml
evals/: caretaking.yaml  caretaking_adversarial.yaml  caretaking_multiturn.yaml  empathy_adversarial.yaml  empathy_in_action.yaml  honesty_adversarial.yaml  honesty_under_pressure.yaml  intellectual_humility.yaml  intellectual_humility_adversarial.yaml
notebooks/: run_evals.ipynb
src/flourish/: __init__.py  cli.py  evaluator.py  judge_comparison.py  meta_judge.py  models.py  scorer.py  wandb_logger.py
tests/: __init__.py  test_evaluator.py  test_meta_judge.py  test_multi_judge.py  test_multiturn.py
viewer/: README.md  app.py  data_loader.py  sample_data.csv
viewer/components/: __init__.py  analytics.py  comparison_view.py  filters.py  transcript_view.py
